// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CallbackCellRendererComponent should invoke passed renderer callback 1`] = `
<div
  id="root0"
  ng-version="5.2.4"
>
  
</div>
`;

exports[`CallbackCellRendererComponent should render transformed value passed through callback 1`] = `
<div
  id="root1"
  ng-version="5.2.4"
>
  myFancyString
</div>
`;
